# evalgate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/evalgate/: __init__.py  stats.py
tests/: test_stats.py
